classDiagram
    class User {
        +String id
        +String email
        +String? name
        +String password
        +Role role
        +DateTime createdAt
        +DateTime updatedAt
        +Order[] orders
    }
    
    class Category {
        +String id
        +String name
        +String? description
        +Product[] products
        +DateTime createdAt
        +DateTime updatedAt
    }
    
    class Product {
        +String id
        +String name
        +String? description
        +Decimal price
        +String? imageUrl
        +Int stock
        +String categoryId
        +Category category
        +OrderItem[] orderItems
        +DateTime createdAt
        +DateTime updatedAt
    }
    
    class Order {
        +String id
        +String? userId
        +User? user
        +OrderStatus status
        +Decimal total
        +String customerName
        +String customerEmail
        +String shippingAddress
        +OrderItem[] items
        +DateTime createdAt
        +DateTime updatedAt
    }
    
    class OrderItem {
        +String id
        +String orderId
        +Order order
        +String productId
        +Product product
        +Int quantity
        +Decimal price
    }
    
    class Role {
        <<enumeration>>
        ADMIN
        CUSTOMER
    }
    
    class OrderStatus {
        <<enumeration>>
        PENDING
        PROCESSING
        SHIPPED
        DELIVERED
        CANCELLED
    }
    
    User "1" -- "0..*" Order : places
    Category "1" -- "0..*" Product : contains
    Order "1" -- "1..*" OrderItem : has
    Product "1" -- "0..*" OrderItem : included in
